<resources>
    <string name="app_name">知鸟旅行</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="index">首页</string>
    <string name="city">城市</string>
    <string name="spot">景点</string>
    <string name="travel">游记</string>
    <string name="personal">我的</string>
    <string name="personal_information">个人信息</string>
    <string name="personal_travel">私人游记</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
